# litelearn-streamlit

./: .gitignore  README.md  main.py  model.pickle  pyproject.toml
